Crear una copia del plugin digitalibmassiu emprant l'API de DigitalIB 2.0  https://github.com/GovernIB/pluginsib-scanweb/issues/32
